# paper-reading-list

./: .gitignore  README.md  start.sh  stop.sh
client/: index.html  package-lock.json  package.json  vite.config.ts
client/src/: App.tsx  main.tsx
client/src/components/: PaperDropZone.tsx  PaperList.tsx
client/src/store/: usePaperStore.ts
client/src/types/: paper.ts
server/: pyproject.toml
server/app/: main.py
server/app/api/: papers.py
server/app/core/: database.py
server/app/models/: paper.py
